--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,6 +20,7 @@ jobs:
 
       - name: Install Dependencies
         run: npm install
+        working-directory: '/home/runner/work/stat-api-spec'
 
       - name: Run remark linter
         run: npm run check-markdown
