--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install Dependencies
         run: npm install
-        working-directory: '/home/runner/work/stat-api-spec'
+        working-directory: ./
 
       - name: Run remark linter
         run: npm run check-markdown
