--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-      - name: Run remark linter
-        run: npm run check-markdown
+      # - name: Run remark linter
+      #   run: npm run check-markdown
 
       - name: Run remark-lint with reviewdog
         # You may pin to the exact commit or the version.
