--- a/.github/workflows/default_workflow.yml
+++ b/.github/workflows/default_workflow.yml
@@ -24,11 +24,6 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-      # - name: Run remark linter
-      #   run: npm run check-markdown
-
-      - name: Run remark-lint with reviewdog
-        # You may pin to the exact commit or the version.
-        # uses: reviewdog/action-remark-lint@55ec26a9926db70370e9627912fee327b44ddef6
-        uses: reviewdog/action-remark-lint@v5.8.3
+      - name: Run remark linter
+        run: npm run check-markdown
           
